--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ selenium==4.16.0
 requests==2.28.2
 retrying==1.3.4
 
-# ML Models
+# ML Model
 scikit-learn==1.3.1
 xgboost==2.0.3
 wordcloud==1.9.2
