--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # EDA
-pandas == 1.3.6
+pandas
 numpy
 seaborn
 matplotlib
 plotly==5.15.0
-pandas-profiling==3.6.6
+pandas-profiling
 dtale==3.9.0
 
 # Web Scraping
@@ -17,6 +17,7 @@ retrying==1.3.4
 scikit-learn==1.3.1
 xgboost==2.0.3
 wordcloud==1.9.2
+category_encoders
 
 
 # Web
