--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,8 @@ retrying==1.3.4
 # ML Model
 scikit-learn==1.3.1
 xgboost==2.0.3
-wordcloud==1.9.2
+wordcloud
 category_encoders
-
 
 # Web
 streamlit==1.31.0
-
--e .
